[package]
name = "sse-codec"
version = "0.3.0"
authors = ["Renée Kooi <renee@kooi.me>"]
description = "async Server-Sent Events protocol encoder/decoder"
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/goto-bus-stop/sse-codec"
repository = "https://github.com/goto-bus-stop/sse-codec"
readme = "README.md"

[dependencies]
futures_codec = "= 0.4.0"
futures-io = "0.3"
bytes = "0.5"
memchr = "2.2"

[dev-dependencies]
surf = { git = "https://github.com/http-rs/surf", default-features = false, features = ["native-client"] }
async-std = "1.0"
futures = "0.3"
