[package]
name = "sse-codec"
version = "0.3.2"
authors = ["Renée Kooi <renee@kooi.me>"]
description = "async Server-Sent Events protocol encoder/decoder"
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/goto-bus-stop/sse-codec"
repository = "https://github.com/goto-bus-stop/sse-codec"
readme = "README.md"

[dependencies]
futures_codec = "= 0.4.1"
futures-io = "0.3"
memchr = "2.2"
arbitrary = { version = "1.0.0", features = ["derive"], optional = true }

[dev-dependencies]
surf = { version = "= 2.1.0", default-features = false, features = ["native-client"] }
async-std = { version = "1.5", features = ["attributes"] }
futures = "0.3"
